--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 TELEGRAM_BOT_TOKEN=8318818882:AAEofjKNtCwvxF8bsF_QaLoiLVBqql1tJHI
 GEMINI_API_KEY=AIzaSyAQrNOl1FIGmDrUO_tewVUUbQ2mweM-lkI
+GEMINI_API_KEY2=AIzaSyChNwTZ5o1gARMT2qr7gvGNC4PAkoS6LBo
